<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:text="@string/choose_date"
        android:padding="@dimen/padding">
    </TextView>

    <RadioGroup
        android:id="@+id/choose_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/period"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin1">

        <RadioButton
            android:id="@+id/radio_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week">
        </RadioButton>
        <RadioButton
            android:id="@+id/two_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_week">
        </RadioButton>
        <RadioButton
            android:id="@+id/mounth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mounth">
        </RadioButton>
        <RadioButton
            android:id="@+id/first_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_date">
        </RadioButton>

    </RadioGroup>
    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_date"
        android:text="@string/all"/>

    <FrameLayout
        android:id="@+id/list_curr"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        app:layout_constraintTop_toBottomOf="@id/checkBox"
        app:layout_constraintStart_toStartOf="parent">
    </FrameLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/list_curr"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/button_title"
        android:layout_margin="@dimen/margin1">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>