<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/analitics_of_currency">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/zaglushka"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/text_size"
        android:layout_margin="@dimen/margin2">
    </TextView>

    <FrameLayout
        android:id="@+id/list_of_curr"
        android:padding="@dimen/padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin1">
    </FrameLayout>

    <TextView
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/list_of_curr"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin1"
        android:textSize="@dimen/text_size"
        android:text="@string/chart"
        android:textAlignment="center"
        android:textStyle="bold"
        android:padding="@dimen/padding">
    </TextView>

    <TextView
        android:id="@+id/period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/chart"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/choose_date"
        android:padding="@dimen/padding">
    </TextView>


    <RadioGroup
        android:id="@+id/choose_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/period"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin1">

        <RadioButton
            android:id="@+id/radio_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week">
        </RadioButton>
        <RadioButton
            android:id="@+id/two_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_week">
        </RadioButton>
        <RadioButton
            android:id="@+id/mounth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mounth">
        </RadioButton>

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>