<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".ui.main.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:background="@color/color_for_buttons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/app_name"
            android:textSize="@dimen/text_size"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/margin2"
            android:layout_marginTop="@dimen/margin_toolbar">

        </TextView>

        <ImageButton
            android:id="@+id/filter"
            android:layout_width="@dimen/margin_top"
            android:layout_height="@dimen/margin_top"
            android:src="@drawable/edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="@dimen/margin2"
            android:layout_marginTop="@dimen/margin_toolbar">

        </ImageButton>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/change"
        android:layout_width="@dimen/width_for_buttons"
        android:layout_height="wrap_content"
        android:text="@string/currencies"
        android:layout_marginTop="@dimen/margin1"
        android:layout_marginLeft="@dimen/margin_left"
        app:layout_constraintStart_toStartOf="@id/toolbar"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
    </Button>
    <Button
        android:id="@+id/history"
        android:layout_width="@dimen/width_for_buttons"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/change"
        app:layout_constraintTop_toTopOf="@id/change"
        android:layout_marginLeft="@dimen/margin_left"
        android:text="@string/history">
    </Button>
    <Button
        android:id="@+id/analytics"
        android:layout_width="@dimen/width_for_buttons"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/history"
        app:layout_constraintTop_toTopOf="@id/history"
        android:layout_marginLeft="@dimen/margin_left"
        android:text="@string/analitics">
    </Button>
    <FrameLayout
        android:id="@+id/list_of_currencies"
        android:padding="@dimen/padding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/history"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin3">
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
